--- a/ADIN.WPF/Themes/ComboBoxStyle.xaml
+++ b/ADIN.WPF/Themes/ComboBoxStyle.xaml
@@ -16,9 +16,10 @@
                       Background="{StaticResource ComboBoxNormalBackgroundBrush}" />
 
             <Path Name="Arrow" Grid.Column="1" 
-                Data="M0,0 L0,2 L4,6 L8,2 L8,0 L4,4 z"
-                HorizontalAlignment="Center" Fill="#444"
-                VerticalAlignment="Center" />
+                    Data="M0,0 L0,2 L4,6 L8,2 L8,0 L4,4 z"
+                    HorizontalAlignment="Center" 
+                    VerticalAlignment="Center"
+                    Fill="{StaticResource hmc.color.content.default}"/>
         </Grid>
         <ControlTemplate.Triggers>
             <Trigger Property="UIElement.IsMouseOver" Value="True">
