ADIN1200_Implementation: - added IsDeviceSelected and used by tab and register access views to disable them when no device is selected

--- a/ADIN.WPF/View/FrameGenCheckerView.xaml
+++ b/ADIN.WPF/View/FrameGenCheckerView.xaml
@@ -12,7 +12,7 @@
     </UserControl.Resources>
     <Grid Margin="5">
 
-        <StackPanel HorizontalAlignment='Stretch' Margin='10' >
+        <StackPanel HorizontalAlignment='Stretch' Margin='10' IsEnabled="{Binding IsDeviceSelected}">
 
             <GroupBox Header='Enable Remote Loopback in Link Partner' Style="{StaticResource GroupBoxStyle}">
                 <StackPanel Margin="0">
