--- a/ADIN.WPF/Themes/WhiteTheme.xaml
+++ b/ADIN.WPF/Themes/WhiteTheme.xaml
@@ -377,8 +377,8 @@
     <SolidColorBrush x:Key="ComboBoxNormalBorderBrush" Color="{Binding Source={StaticResource hmc.color.layout.divider.default},Path=Color}" />
     <!--<SolidColorBrush x:Key="ComboBoxNormalBorderBrush" Color="{Binding Source={StaticResource hmc.color.content.default},Path=Color}" />-->
     <SolidColorBrush x:Key="ComboBoxNormalBackgroundBrush" Color="{Binding Source={StaticResource hmc.color.content.inverse}, Path=Color}" />
-    <!--<SolidColorBrush x:Key="ComboBoxDisabledForegroundBrush" Color="#888" />
+    <SolidColorBrush x:Key="ComboBoxDisabledForegroundBrush" Color="#888" />
     <SolidColorBrush x:Key="ComboBoxDisabledBackgroundBrush" Color="#eee" />
-    <SolidColorBrush x:Key="ComboBoxDisabledBorderBrush" Color="#888" />-->
+    <SolidColorBrush x:Key="ComboBoxDisabledBorderBrush" Color="#888" />
 
 </ResourceDictionary>
