--- a/ADIN.WPF/View/TestModeView.xaml
+++ b/ADIN.WPF/View/TestModeView.xaml
@@ -18,42 +18,45 @@
             <StackPanel Orientation="Vertical">
                 <TextBlock Text="Select Test Mode" Margin="0 0 0 10" Style="{StaticResource TextBlockstyle}"/>
 
-                <ListView ItemsSource="{Binding TestModes}" SelectedItem="{Binding SelectedTestMode}">
-                    <ListView.ItemTemplate>
-                        <DataTemplate>
-                            <Grid>
-                                <Grid.ColumnDefinitions>
-                                    <ColumnDefinition Width="Auto"/>
-                                    <ColumnDefinition Width="*"/>
-                                </Grid.ColumnDefinitions>
-                                <Grid.RowDefinitions>
-                                    <RowDefinition Height="Auto"/>
-                                    <RowDefinition Height="*"/>
-                                    <RowDefinition Height="2"/>
-                                </Grid.RowDefinitions>
-                                <TextBlock x:Name="TestModeName" Grid.Column="0" Grid.Row="0" Text="{Binding Name1}"/>
-                                <TextBlock Grid.Column="0" Grid.Row="1" Text="{Binding Description}" FontSize="12" FontWeight="Normal"/>
-                            </Grid>
-                        </DataTemplate>
-                    </ListView.ItemTemplate>
-                    <ListView.ItemContainerStyle>
-                        <Style TargetType="ListViewItem">
-                            <Style.Triggers>
-                                <Trigger Property="IsSelected" Value="True">
-                                    <Setter Property="FontWeight" Value="Bold"/>
-                                </Trigger>
-                            </Style.Triggers>
-                        </Style>
-                    </ListView.ItemContainerStyle>
-                </ListView>
-                
+                <Border Style="{StaticResource BorderSyle}">
+                    <ListView ItemsSource="{Binding TestModes}" SelectedItem="{Binding SelectedTestMode}" BorderThickness="0">
+                        <ListView.ItemTemplate>
+                            <DataTemplate>
+                                <Grid>
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition Width="Auto"/>
+                                        <ColumnDefinition Width="*"/>
+                                    </Grid.ColumnDefinitions>
+                                    <Grid.RowDefinitions>
+                                        <RowDefinition Height="Auto"/>
+                                        <RowDefinition Height="*"/>
+                                        <RowDefinition Height="2"/>
+                                    </Grid.RowDefinitions>
+                                    <TextBlock x:Name="TestModeName" Grid.Column="0" Grid.Row="0" Text="{Binding Name1}"/>
+                                    <TextBlock Grid.Column="0" Grid.Row="1" Text="{Binding Description}" FontSize="12" FontWeight="Normal"/>
+                                </Grid>
+                            </DataTemplate>
+                        </ListView.ItemTemplate>
+                        <ListView.ItemContainerStyle>
+                            <Style TargetType="ListViewItem">
+                                <Style.Triggers>
+                                    <Trigger Property="IsSelected" Value="True">
+                                        <Setter Property="FontWeight" Value="Bold"/>
+                                    </Trigger>
+                                </Style.Triggers>
+                            </Style>
+                        </ListView.ItemContainerStyle>
+                    </ListView>
+                </Border>
                 <!--<ComboBox ItemsSource="{Binding TestModes}" SelectedItem="{Binding SelectedTestMode}" Margin="0 0 0 10" Style="{StaticResource ComboBoxFlatStyle}">
                     <ComboBox.ItemTemplate>
                         <DataTemplate>
                             <StackPanel Orientation="Vertical">
                                 <StackPanel Orientation="Horizontal">
                                     <TextBlock Text="{Binding Name1}"/>
-                                    --><!--<TextBlock Text="{Binding Name2}" FontWeight="Bold"/>--><!--
+                                    -->
+                <!--<TextBlock Text="{Binding Name2}" FontWeight="Bold"/>-->
+                <!--
                                 </StackPanel>
                                 <TextBlock Text="{Binding Description}" FontStyle="Italic"/>
                             </StackPanel>
