--- a/ADIN.WPF/View/TestModeView.xaml
+++ b/ADIN.WPF/View/TestModeView.xaml
@@ -32,13 +32,14 @@
                                         <RowDefinition Height="*"/>
                                         <RowDefinition Height="2"/>
                                     </Grid.RowDefinitions>
-                                    <TextBlock x:Name="TestModeName" Grid.Column="0" Grid.Row="0" Text="{Binding Name1}"/>
+                                    <TextBlock x:Name="TestModeName" Grid.Column="0" Grid.Row="0" FontSize="14" Text="{Binding Name1}"/>
                                     <TextBlock Grid.Column="0" Grid.Row="1" Text="{Binding Description}" FontSize="12" FontWeight="Normal"/>
                                 </Grid>
                             </DataTemplate>
                         </ListView.ItemTemplate>
                         <ListView.ItemContainerStyle>
                             <Style TargetType="ListViewItem">
+                                <Setter Property="FontFamily" Value="Barlow"/>
                                 <Style.Triggers>
                                     <Trigger Property="IsSelected" Value="True">
                                         <Setter Property="FontWeight" Value="Bold"/>
