--- a/ADIN.WPF/View/DeviceStatusView.xaml
+++ b/ADIN.WPF/View/DeviceStatusView.xaml
@@ -90,7 +90,7 @@
 
                 <Border Style="{StaticResource BorderSyle}" Grid.Column="0">
                     <StackPanel Orientation="Vertical">
-                        <TextBlock Text="Local:" Style="{StaticResource DeviceStatusTextBlockstyle}"/>
+                        <TextBlock Text="Autonegotiation Advertisement:" Style="{StaticResource DeviceStatusTextBlockstyle}"/>
                         <telerik:RadListBox ItemsSource="{Binding LocalAdvertisedSpeeds}"
                                             Style="{StaticResource ListBoxStyle}"/>
                     </StackPanel>
@@ -98,7 +98,7 @@
 
                 <Border Style="{StaticResource BorderSyle}" Grid.Column="2">
                     <StackPanel Orientation="Vertical">
-                        <TextBlock Text="Remote:" Style="{StaticResource DeviceStatusTextBlockstyle}"/>
+                        <TextBlock Text="Autonegotiation Link Partner:" Style="{StaticResource DeviceStatusTextBlockstyle}"/>
                         <telerik:RadListBox ItemsSource="{Binding RemoteAdvertisedSpeeds}"
                                             Style="{StaticResource ListBoxStyle}"/>
                     </StackPanel>
