--- a/ADIN.WPF/View/LinkPropertiesView.xaml
+++ b/ADIN.WPF/View/LinkPropertiesView.xaml
@@ -7,7 +7,7 @@
              xmlns:telerik="http://schemas.telerik.com/2008/xaml/presentation"
              xmlns:converters="clr-namespace:ADIN.WPF.Converters"
              mc:Ignorable="d" 
-             d:DesignHeight="800" d:DesignWidth="800">
+             d:DesignHeight="1500" d:DesignWidth="800">
     <UserControl.Resources>
         <FrameworkElement x:Key="ProxyElement" DataContext="{Binding}"/>
         <telerik:BooleanToVisibilityConverter x:Key="booleanVisibilityConverter"/>
@@ -19,9 +19,8 @@
         <ContentControl Visibility="Visible" Content="{StaticResource ProxyElement}"/>
         <ScrollViewer VerticalScrollBarVisibility="Auto" >
             <StackPanel Orientation="Vertical" IsEnabled="{Binding IsDeviceSelected}">
-                <Grid>
-                    <GroupBox Header="Speed" Style="{StaticResource GroupBoxStyle}" 
-				  Margin="0 5">
+                <Grid Visibility="{Binding IsADIN1200Board_ADIN1300Board, Converter={StaticResource booleanVisibilityConverter}}">
+                    <GroupBox Header="Speed" Style="{StaticResource GroupBoxStyle}" Margin="0 5">
                         <Grid>
                             <Grid.ColumnDefinitions>
                                 <ColumnDefinition Width="220"/>
@@ -33,7 +32,7 @@
                     </GroupBox>
                 </Grid>
 
-                <Grid>
+                <Grid Visibility="{Binding IsADIN1200Board_ADIN1300Board, Converter={StaticResource booleanVisibilityConverter}}">
                     <GroupBox Header="Auto-Negotation Advertised Speeds" Style="{StaticResource GroupBoxStyle}" 
 				  Visibility="{Binding DataContext.IsANAdvertisedSpeedVisible, Source={StaticResource ProxyElement}, Converter={StaticResource booleanVisibilityConverter}}"
 				  Margin="0 0 0 5">
@@ -86,7 +85,7 @@
                     </GroupBox>
                 </Grid>
 
-                <Grid>
+                <Grid Visibility="{Binding IsADIN1200Board_ADIN1300Board, Converter={StaticResource booleanVisibilityConverter}}">
                     <GroupBox Header="EEE Advertisement" Style="{StaticResource GroupBoxStyle}"
 				              Visibility="{Binding DataContext.IsANAdvertisedSpeedVisible, Source={StaticResource ProxyElement}, Converter={StaticResource booleanVisibilityConverter}}"
 				              Margin="0 0 0 5">
@@ -113,7 +112,7 @@
                     </GroupBox>
                 </Grid>
 
-                <Grid>
+                <Grid Visibility="{Binding IsADIN1200Board_ADIN1300Board, Converter={StaticResource booleanVisibilityConverter}}">
                     <GroupBox Header="Down Speed" Style="{StaticResource GroupBoxStyle}"
 				              Visibility="{Binding DataContext.IsANAdvertisedSpeedVisible, Source={StaticResource ProxyElement}, Converter={StaticResource booleanVisibilityConverter}}"
 				              Margin="0 0 0 5">
@@ -144,7 +143,7 @@
                     </GroupBox>
                 </Grid>
 
-                <Grid>
+                <Grid Visibility="{Binding IsADIN1200Board_ADIN1300Board, Converter={StaticResource booleanVisibilityConverter}}">
                     <GroupBox Header="Forced Speed" Style="{StaticResource GroupBoxStyle}" 
 				  Visibility="{Binding DataContext.IsForcedSpeedVisible, Source={StaticResource ProxyElement}, Converter={StaticResource booleanVisibilityConverter}}"
 				  Margin="0 0 0 5">
@@ -159,7 +158,7 @@
                     </GroupBox>
                 </Grid>
 
-                <Grid>
+                <Grid Visibility="{Binding IsADIN1200Board_ADIN1300Board, Converter={StaticResource booleanVisibilityConverter}}">
                     <GroupBox Header="MDIX" Style="{StaticResource GroupBoxStyle}"
 				  Visibility="{Binding DataContext.IsForcedSpeedVisible, Source={StaticResource ProxyElement}, Converter={StaticResource booleanVisibilityConverter}}"
 				  Margin="0 0 0 5">
@@ -174,15 +173,40 @@
                     </GroupBox>
                 </Grid>
 
-                <Grid>
-                    <GroupBox Header="Energy Detect Power-down Mode" Style="{StaticResource GroupBoxStyle}"
-				  Margin="0,0,0,10">
+                <Grid Visibility="{Binding IsADIN1200Board_ADIN1300Board, Converter={StaticResource booleanVisibilityConverter}}">
+                    <GroupBox Header="Energy Detect Power-down Mode" Style="{StaticResource GroupBoxStyle}" Margin="0,0,0,5">
                         <Grid>
                             <Grid.ColumnDefinitions>
                                 <ColumnDefinition Width="220"/>
                                 <ColumnDefinition Width="*"/>
                             </Grid.ColumnDefinitions>
                             <TextBlock Grid.Column="0" Text="Energy Detect Power-down Mode: " Style="{StaticResource TextBlockstyle}"/>
+                            <ComboBox Grid.Column="1" ItemsSource="{Binding EnergyDetectPowerDownModes}" SelectedItem="{Binding SelectedEnergyDetectPowerDownMode}" Style="{StaticResource ComboBoxFlatStyle}"/>
+                        </Grid>
+                    </GroupBox>
+                </Grid>
+
+                <Grid Visibility="{Binding IsADIN1100Board, Converter={StaticResource booleanVisibilityConverter}}">
+                    <GroupBox Header="Auto-negotiation Mater/Slave Advertisement" Style="{StaticResource GroupBoxStyle}" Margin="0 5">
+                        <Grid>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="220"/>
+                                <ColumnDefinition Width="*"/>
+                            </Grid.ColumnDefinitions>
+                            <TextBlock Grid.Column="0" Text="Master or Slave Preference: " Style="{StaticResource TextBlockstyle}"/>
+                            <ComboBox Grid.Column="1" ItemsSource="{Binding EnergyDetectPowerDownModes}" SelectedItem="{Binding SelectedEnergyDetectPowerDownMode}" Style="{StaticResource ComboBoxFlatStyle}"/>
+                        </Grid>
+                    </GroupBox>
+                </Grid>
+
+                <Grid Visibility="{Binding IsADIN1100Board, Converter={StaticResource booleanVisibilityConverter}}">
+                    <GroupBox Header="Auto-negotiation Tx Level Advertisement" Style="{StaticResource GroupBoxStyle}" Margin="0 0 0 10">
+                        <Grid>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="220"/>
+                                <ColumnDefinition Width="*"/>
+                            </Grid.ColumnDefinitions>
+                            <TextBlock Grid.Column="0" Text="Tx Level: " Style="{StaticResource TextBlockstyle}"/>
                             <ComboBox Grid.Column="1" ItemsSource="{Binding EnergyDetectPowerDownModes}" SelectedItem="{Binding SelectedEnergyDetectPowerDownMode}" Style="{StaticResource ComboBoxFlatStyle}"/>
                         </Grid>
                     </GroupBox>
