--- a/ADIN.WPF/View/LinkPropertiesView.xaml
+++ b/ADIN.WPF/View/LinkPropertiesView.xaml
@@ -194,7 +194,7 @@
                                 <ColumnDefinition Width="*"/>
                             </Grid.ColumnDefinitions>
                             <TextBlock Grid.Column="0" Text="Master or Slave Preference: " Style="{StaticResource TextBlockstyle}"/>
-                            <ComboBox Grid.Column="1" ItemsSource="{Binding EnergyDetectPowerDownModes}" SelectedItem="{Binding SelectedEnergyDetectPowerDownMode}" Style="{StaticResource ComboBoxFlatStyle}"/>
+                            <ComboBox Grid.Column="1" ItemsSource="{Binding MasterSlaveAdvertises}" SelectedItem="{Binding SelectedMasterSlaveAdvertise}" Style="{StaticResource ComboBoxFlatStyle}"/>
                         </Grid>
                     </GroupBox>
                 </Grid>
@@ -207,7 +207,7 @@
                                 <ColumnDefinition Width="*"/>
                             </Grid.ColumnDefinitions>
                             <TextBlock Grid.Column="0" Text="Tx Level: " Style="{StaticResource TextBlockstyle}"/>
-                            <ComboBox Grid.Column="1" ItemsSource="{Binding EnergyDetectPowerDownModes}" SelectedItem="{Binding SelectedEnergyDetectPowerDownMode}" Style="{StaticResource ComboBoxFlatStyle}"/>
+                            <ComboBox Grid.Column="1" ItemsSource="{Binding TxLevels}" SelectedItem="{Binding SelectedTxLevel}" Style="{StaticResource ComboBoxFlatStyle}"/>
                         </Grid>
                     </GroupBox>
                 </Grid>
